--- a/menu.css
+++ b/menu.css
@@ -21,7 +21,7 @@ ul, ol {
 }
 
 .nav li a {
-    background-color: #42fe09;
+    background-color: #0d1acf;
     color: #080808;
     text-decoration: none;
     padding: 10px 12px;
